--- a/quiz.html
+++ b/quiz.html
@@ -264,111 +264,111 @@ function loadNextQuestion () {
         nextButton.textContent = 'Finish';
     }
 
-    if($(totalScore) == 1) {
-      yourGenre = "Pop";
-      yourArtists = "You may be more prone to getting emotional than the average person. You may enjoy artists like Frank Ocean, the Weeknd, and Car Seat Headrest."
-      yourSongs = ""
-    }
-    if($(totalScore) == 2) {
-      yourGenre = "Pop";
-      yourArtists = "You may be more prone to getting emotional than the average person. You may enjoy artists like Frank Ocean, the Weeknd, and Car Seat Headrest."
-      yourSongs = ""
-    }
-    if($(totalScore) == 3) {
-      yourGenre = "Pop";
-      yourArtists = "You may be more prone to getting emotional than the average person. You may enjoy artists like Frank Ocean, the Weeknd, and Car Seat Headrest."
-      yourSongs = ""
-    }
-    if($(totalScore) == 4) {
-      yourGenre = "Pop";
-      yourArtists = "You're cheerful and a happy spirit to be around. You may enjoy artists like Taylor Swift, Katy Perry, and Panic at the Disco."
-      yourSongs = ""
-    }
-    if($(totalScore) == 5) {
-      yourGenre = "Pop";
-      yourArtists = "You're cheerful and a happy spirit to be around. You may enjoy artists like Taylor Swift, Katy Perry, and Panic at the Disco."
-      yourSongs = ""
-    }
-    if($(totalScore) == 6) {
-      yourGenre = "Pop";
-      yourArtists = "You're cheerful and a happy spirit to be around. You may enjoy artists like Taylor Swift, Katy Perry, and Panic at the Disco."
-      yourSongs = ""
-    }
-    if($(totalScore) == 7) {
-      yourGenre = "Pop/R&B";
-      yourArtists = "You're extremely calm and make sure that things are in your control first. You may enjoy artists like Clairo, Jhene Aiko, and Jorja Smith."
-      yourSongs = ""
-    }
-    if($(totalScore) == 8) {
-      yourGenre = "Pop/R&B";
-      yourArtists = "You're extremely calm and make sure that things are in your control first. You may enjoy artists like Clairo, Jhene Aiko, and Jorja Smith."
-      yourSongs = ""
-    }
-    if($(totalScore) == 9) {
-      yourGenre = "Pop/R&B";
-      yourArtists = "You're extremely calm and make sure that things are in your control first. You may enjoy artists like Clairo, Jhene Aiko, and Jorja Smith."
-      yourSongs = ""
-    }
-    if($(totalScore) == 10) {
-      yourGenre = "Alternative";
-      yourArtists = "You make timely decisions and know how to manage your decisions based on your circumstances. You may like artists like Thundercat, FKA twigs, and Childish Gambino."
-      yourSongs = ""
-    }
-    if($(totalScore) == 11) {
-      yourGenre = "Alternative";
-      yourArtists = "You make timely decisions and know how to manage your decisions based on your circumstances. You may like artists like Thundercat, FKA twigs, and Childish Gambino."
-      yourSongs = ""
-    }
-    if($(totalScore) == 12) {
-      yourGenre = "Alternative";
-      yourArtists = "You make timely decisions and know how to manage your decisions based on your circumstances. You may like artists like Thundercat, FKA twigs, and Childish Gambino."
-      yourSongs = ""
-    }
-    if($(totalScore) == 13) {
-      yourGenre = "Alternative";
-      yourArtists = "You're cool-headed and old people might refer to you as a good soul. You may like artists like Gorillaz, Tame Impala, and Bon Iver."
-      yourSongs = ""
-    }
-    if($(totalScore) == 14) {
-      yourGenre = "Rap/Hip-Hop";
-      yourArtists = "You may have a tendency to be impulsive, but you're also intelligent. You may like artists like Kendrick Lamar, Joey Bada$$, and J. Cole."
-      yourSongs = ""
-    }
-    if($(totalScore) == 15) {
-      yourGenre = "Rap/Hip-Hop";
-      yourArtists = "You may have a tendency to be impulsive, but you're also intelligent. You may like artists like Kendrick Lamar, Joey Bada$$, and J. Cole."
-      yourSongs = ""
-    }
-    if($(totalScore) == 16) {
-      yourGenre = "Rap/Hip-Hop";
-      yourArtists = "You may have a tendency to be impulsive, but you're also intelligent. You may like artists like Kendrick Lamar, Joey Bada$$, and J. Cole."
-      yourSongs = ""
-    }
-    if($(totalScore) == 17) {
-      yourGenre = "Rap/Hip-Hop";
-      yourArtists = "You're quick to act and make decisions when you know you need to. You may like artists like Travis Scott, Future, and Young Thug."
-      yourSongs = ""
-    }
-    if($(totalScore) == 18) {
-      yourGenre = "Rap/Hip-Hop";
-      yourArtists = "You're quick to act and make decisions when you know you need to. You may like artists like Travis Scott, Future, and Young Thug."
-      yourSongs = ""
-    }
-    if($(totalScore) == 19) {
-      yourGenre = "Rap/Hip-Hop";
-      yourArtists = "You're quick to act and make decisions when you know you need to. You may like artists like Travis Scott, Future, and Young Thug."
-      yourSongs = ""
-    }
-    if($(totalScore) == 20) {
-      yourGenre = "Rap/Hip-Hop"
-      yourArtists = "You have likely been referred to as aggressive before (Don't worry, it's not necessarily a bad thing). Some artists you might like are Ski Mask the Slump God, Dababy, and Westside Gunn."
-      yourSongs = ""
-    }
-    if($(totalScore) == 21) {
-      yourGenre = "Rap/Hip-Hop"
-      yourArtists = "You have likely been referred to as aggressive before (Don't worry, it's not necessarily a bad thing). Some artists you might like are Ski Mask the Slump God, Dababy, and Westside Gunn."
-      yourSongs = ""
-    }
+    // if($(totalScore) == 1) {
+    //   yourGenre = "Pop";
+    //   yourArtists = "You may be more prone to getting emotional than the average person. You may enjoy artists like Frank Ocean, the Weeknd, and Car Seat Headrest."
+    //   yourSongs = ""
+    // }
+    // if($(totalScore) == 2) {
+    //   yourGenre = "Pop";
+    //   yourArtists = "You may be more prone to getting emotional than the average person. You may enjoy artists like Frank Ocean, the Weeknd, and Car Seat Headrest."
+    //   yourSongs = ""
+    // }
+    // if($(totalScore) == 3) {
+    //   yourGenre = "Pop";
+    //   yourArtists = "You may be more prone to getting emotional than the average person. You may enjoy artists like Frank Ocean, the Weeknd, and Car Seat Headrest."
+    //   yourSongs = ""
+    // }
+    // if($(totalScore) == 4) {
+    //   yourGenre = "Pop";
+    //   yourArtists = "You're cheerful and a happy spirit to be around. You may enjoy artists like Taylor Swift, Katy Perry, and Panic at the Disco."
+    //   yourSongs = ""
+    // }
+    // if($(totalScore) == 5) {
+    //   yourGenre = "Pop";
+    //   yourArtists = "You're cheerful and a happy spirit to be around. You may enjoy artists like Taylor Swift, Katy Perry, and Panic at the Disco."
+    //   yourSongs = ""
+    // }
+    // if($(totalScore) == 6) {
+    //   yourGenre = "Pop";
+    //   yourArtists = "You're cheerful and a happy spirit to be around. You may enjoy artists like Taylor Swift, Katy Perry, and Panic at the Disco."
+    //   yourSongs = ""
+    // }
+    // if($(totalScore) == 7) {
+    //   yourGenre = "Pop/R&B";
+    //   yourArtists = "You're extremely calm and make sure that things are in your control first. You may enjoy artists like Clairo, Jhene Aiko, and Jorja Smith."
+    //   yourSongs = ""
+    // }
+    // if($(totalScore) == 8) {
+    //   yourGenre = "Pop/R&B";
+    //   yourArtists = "You're extremely calm and make sure that things are in your control first. You may enjoy artists like Clairo, Jhene Aiko, and Jorja Smith."
+    //   yourSongs = ""
+    // }
+    // if($(totalScore) == 9) {
+    //   yourGenre = "Pop/R&B";
+    //   yourArtists = "You're extremely calm and make sure that things are in your control first. You may enjoy artists like Clairo, Jhene Aiko, and Jorja Smith."
+    //   yourSongs = ""
+    // }
+    // if($(totalScore) == 10) {
+    //   yourGenre = "Alternative";
+    //   yourArtists = "You make timely decisions and know how to manage your decisions based on your circumstances. You may like artists like Thundercat, FKA twigs, and Childish Gambino."
+    //   yourSongs = ""
+    // }
+    // if($(totalScore) == 11) {
+    //   yourGenre = "Alternative";
+    //   yourArtists = "You make timely decisions and know how to manage your decisions based on your circumstances. You may like artists like Thundercat, FKA twigs, and Childish Gambino."
+    //   yourSongs = ""
+    // }
+    // if($(totalScore) == 12) {
+    //   yourGenre = "Alternative";
+    //   yourArtists = "You make timely decisions and know how to manage your decisions based on your circumstances. You may like artists like Thundercat, FKA twigs, and Childish Gambino."
+    //   yourSongs = ""
+    // }
+    // if($(totalScore) == 13) {
+    //   yourGenre = "Alternative";
+    //   yourArtists = "You're cool-headed and old people might refer to you as a good soul. You may like artists like Gorillaz, Tame Impala, and Bon Iver."
+    //   yourSongs = ""
+    // }
+    // if($(totalScore) == 14) {
+    //   yourGenre = "Rap/Hip-Hop";
+    //   yourArtists = "You may have a tendency to be impulsive, but you're also intelligent. You may like artists like Kendrick Lamar, Joey Bada$$, and J. Cole."
+    //   yourSongs = ""
+    // }
+    // if($(totalScore) == 15) {
+    //   yourGenre = "Rap/Hip-Hop";
+    //   yourArtists = "You may have a tendency to be impulsive, but you're also intelligent. You may like artists like Kendrick Lamar, Joey Bada$$, and J. Cole."
+    //   yourSongs = ""
+    // }
+    // if($(totalScore) == 16) {
+    //   yourGenre = "Rap/Hip-Hop";
+    //   yourArtists = "You may have a tendency to be impulsive, but you're also intelligent. You may like artists like Kendrick Lamar, Joey Bada$$, and J. Cole."
+    //   yourSongs = ""
+    // }
+    // if($(totalScore) == 17) {
+    //   yourGenre = "Rap/Hip-Hop";
+    //   yourArtists = "You're quick to act and make decisions when you know you need to. You may like artists like Travis Scott, Future, and Young Thug."
+    //   yourSongs = ""
+    // }
+    // if($(totalScore) == 18) {
+    //   yourGenre = "Rap/Hip-Hop";
+    //   yourArtists = "You're quick to act and make decisions when you know you need to. You may like artists like Travis Scott, Future, and Young Thug."
+    //   yourSongs = ""
+    // }
+    // if($(totalScore) == 19) {
+    //   yourGenre = "Rap/Hip-Hop";
+    //   yourArtists = "You're quick to act and make decisions when you know you need to. You may like artists like Travis Scott, Future, and Young Thug."
+    //   yourSongs = ""
+    // }
+    // if($(totalScore) == 20) {
+    //   yourGenre = "Rap/Hip-Hop"
+    //   yourArtists = "You have likely been referred to as aggressive before (Don't worry, it's not necessarily a bad thing). Some artists you might like are Ski Mask the Slump God, Dababy, and Westside Gunn."
+    //   yourSongs = ""
+    // }
+    // if($(totalScore) == 21) {
+    //   yourGenre = "Rap/Hip-Hop"
+    //   yourArtists = "You have likely been referred to as aggressive before (Don't worry, it's not necessarily a bad thing). Some artists you might like are Ski Mask the Slump God, Dababy, and Westside Gunn."
+    //   yourSongs = ""
+    // }
   
     if(currentQuestion == totalQuestions) {
         container.style.display = 'none';
@@ -377,8 +377,14 @@ function loadNextQuestion () {
          <div class="summary">
             <h1>Summary</h1>
             <p>Music Taste by Score:</p>
-            <p>${yourGenre}</p>
-            <p>${yourArtists}</p>
+            <p><strong>20 - 21</strong> - Your Genre: Rap/Hip-Hop. You have likely been referred to as aggressive before (Don't worry, it's not necessarily a bad thing). Some artists you might like are Ski Mask the Slump God, Dababy, and Westside Gunn.</p>
+            <p><strong>17 - 19</strong> - Your Genre: Rap/Hip-Hop. You're quick to act and make decisions when you know you need to. You may like artists like Travis Scott, Future, and Young Thug.</p>
+            <p><strong>14 - 16</strong> - Your Genre: Rap/Hip-Hop. You may have a tendency to be impulsive, but you're also intelligent. You may like artists like Kendrick Lamar, Joey Bada$$, and J. Cole.</p>
+            <p><strong>13</strong> - Your Genre: Alternative. You're cool-headed and old people might refer to you as a good soul. You may like artists like Gorillaz, Tame Impala, and Bon Iver.</p>
+            <p><strong>10 - 12</strong> - Your Genre: Alternative. You make timely decisions and know how to manage your decisions based on your circumstances. You may like artists like Thundercat, FKA twigs, and Childish Gambino.</p>
+            <p><strong>7 - 9</strong> - Your Genre: Pop/R&B. You're extremely calm and make sure that things are in your control first. You may enjoy artists like Clairo, Jhene Aiko, and Jorja Smith.</p>
+            <p><strong>4 - 6</strong> -  Your Genre: Pop. You're cheerful and a happy spirit to be around. You may enjoy artists like Taylor Swift, Katy Perry, and Panic at the Disco.</p>
+            <p><strong>1 - 3</strong> -  Your Genre: Pop. You may be more prone to getting emotional than the average person. You may enjoy artists like Frank Ocean, the Weeknd, and Car Seat Headrest.</p>
         </div>
         <button class="restart">Restart Quiz</button>
          `;
