--- a/songfeedback.html
+++ b/songfeedback.html
@@ -64,7 +64,7 @@ window.onload = wrap_img;
           </span>
         </label>
 
-        <div class="trigger"><a class="page-link" href="/RAYJ-final/quiz">Quiz</a><a class="page-link" href="/RAYJ-final/login">Login</a><a class="page-link" href="/RAYJ-final/api">API</a><a class="page-link" href="/RAYJ-final/search/">Search</a><a class="page-link" href="/RAYJ-final/about/">About</a><a class="page-link" href="/RAYJ-final/platforms/">Top Music Platforms for Streaming!</a><a class="page-link" href="/RAYJ-final/songfeedback">Song Feedback</a></div>
+        <div class="trigger"><a class="page-link" href="/RAYJ-final/quiz">Quiz</a><a class="page-link" href="/RAYJ-final/login">Login</a><a class="page-link" href="/RAYJ-final/api">API</a><a class="page-link" href="/RAYJ-final/search/">Search</a><a class="page-link" href="/RAYJ-final/about/">About</a><a class="page-link" href="/RAYJ-final/platforms/">Platforms</a><a class="page-link" href="/RAYJ-final/songfeedback">Song Feedback</a></div>
       </nav></div>
 </header>
 <main class="page-content" aria-label="Content">
