--- a/_pages/01_login.html
+++ b/_pages/01_login.html
@@ -10,6 +10,7 @@ week: 2
     <title>Login</title>
 </head>
     <th:block layout:fragment="body" th:remove="tag">
+    <container>
     <br> <h1 style="color:white;margin-top:3%">Welcome back! Login or make a new account to get started!</h1> <br> 
     <center>
         <form style="color: black">
@@ -25,13 +26,14 @@ week: 2
             </div>
         </form>
     </center>  
+</container>
     </body>
         <style>
         h1 {
             text-align: center;
             font-size: 24px;
         }
-        body {
+        container {
             background:linear-gradient(#0e071b, #230a4d);
         }
         form {
